# QtDemo

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile
apps/algo_worker/: CMakeLists.txt
apps/algo_worker/src/: main.cpp  main_dds.cpp
apps/controller_app/: CMakeLists.txt
apps/controller_app/src/: ControllerApp.cpp  ControllerApp.h  ControllerRuntimeDds.cpp  ControllerRuntimeDds.h  DemoController.cpp  DemoController.h  DeviceSimulator.cpp  DeviceSimulator.h  MainWindow.cpp  MainWindow.h  QtSubsystem.cpp  QtSubsystem.h  main.cpp
apps/controller_app/src/ui/: ControlPanel.cpp  ControlPanel.h  LogPanel.cpp  LogPanel.h  ReadoutStrip.cpp  ReadoutStrip.h  StatusStrip.cpp  StatusStrip.h  StyleHelper.h  TelemetryChart.cpp  TelemetryChart.h
apps/monitor_node/: CMakeLists.txt
apps/monitor_node/src/: main.cpp
apps/stress_test/: CMakeLists.txt
apps/stress_test/src/: main.cpp
cmake/: deploy_win.cmake.in
common/: CMakeLists.txt
common/include/common/algo/: AlgoProcessManager.h
common/include/common/config/: Config.h  ConfigPoco.h
common/include/common/control/: ActuatorSimulator.h  ControlLoop.h  ControlModels.h
common/include/common/controller/: ControllerRuntime.h
common/include/common/device/: IDataAcquisition.h  IHardwareControl.h
common/include/common/fault/: FaultInjector.h
common/include/common/heartbeat/: HeartbeatMonitor.h
common/include/common/ipc/: BinaryCodec.h  IpcClient.h  IpcServer.h  Protocol.h
common/include/common/log/: Log.h
common/include/common/process/: ProcessLauncher.h
common/include/common/rt/: DoubleBufferChannel.h
common/include/common/sensor/: SensorModels.h  SensorPipeline.h  SensorSimulator.h
common/include/common/status/: Models.h  StatusSnapshot.h
common/include/common/time/: MonotonicClock.h
common/src/common/algo/: AlgoProcessManager.cpp
common/src/common/config/: Config.cpp
common/src/common/control/: ActuatorSimulator.cpp  ControlLoop.cpp
common/src/common/controller/: ControllerRuntime.cpp
common/src/common/fault/: FaultInjector.cpp
common/src/common/heartbeat/: HeartbeatMonitor.cpp
common/src/common/ipc/: IpcClient.cpp  IpcServer.cpp
common/src/common/log/: Log.cpp
common/src/common/process/: ProcessLauncher.cpp
common/src/common/sensor/: SensorPipeline.cpp  SensorSimulator.cpp
config/: algo_worker.ini  app.ini  controller_app.ini  monitor_node.ini  stress_test.ini
dds_core/: CMakeLists.txt  DDSNode.cpp  DDSNode.hpp  QoSProfiles.hpp  TopicRegistry.hpp
docs/: demo-mapping-to-complex-systems.md  design-flow.md  interfaces-and-dataflow.md
messages/: CMakeLists.txt  ControlCommand.idl  JointState.idl
messages/test_docker_fastddsgen/: Dockerfile.recommended  README.md  Test.idl  run_test.bat  run_test.sh
scripts/: README.md  build.sh  config.example  install.sh  verify_startup.ps1  verify_startup.sh
